# manus

./: .gitignore  CMakeLists.txt  CMakeLists.txt.backup  MANUS_INTEGRATION_README.md  build_and_run_test.bat  build_integration.sh  build_manus_integration.bat  configure_fallback.txt  configure_output.txt  quick_configure_test.bat  test_build_fixes.bat  test_clean_cmake.bat  test_external_project_fix.bat  test_final_guild.bat  test_syntax_fix.bat  validate_eigen_fix.bat
MANUS_Core_3.0.0_SDK/: SDKClient.sln
MANUS_Core_3.0.0_SDK/SDKClient_Windows/: Main.cpp  SDKClient.cpp  SDKClient.hpp  SDKClient.vcxproj  SDKClient.vcxproj.filters  log.csv  log.txt
MANUS_Core_3.0.0_SDK/SDKClient_Windows/PlatformSpecific/Windows/: ClientPlatformSpecificTypes.hpp
MANUS_Core_3.0.0_SDK/SDKClient_Windows/SurgeSDK/: surge.cpp  surge.h
MANUS_Core_3.0.0_SDK/SDKMinimalClient_Linux/: Dockerfile  Dockerfile.Integrated  SDKMinimalClient.hpp
MANUS_Core_3.0.0_SDK/SDKMinimalClient_Windows/: SDKMinimalClient.cpp  SDKMinimalClient.vcxproj  SDKMinimalClient.vcxproj.filters
MANUS_Core_3.0.0_SDK/Temp/{9F01F8C2-DB01-407B-8256-1A63F8FB672C}/x64/Debug/: SDKClient_Windows.exe.recipe
MANUS_Core_3.0.0_SDK/Temp/{9F01F8C2-DB01-407B-8256-1A63F8FB672C}/x64/Debug/SDKClien.9F01F8C2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SDKClient_Windows.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MANUS_Core_3.0.0_SDK/Temp/{cec27524-dcf6-4633-bbe6-537864fc77c7}/x64/Debug/: SDKMinimalClient_Windows.exe.recipe
MANUS_Core_3.0.0_SDK/Temp/{cec27524-dcf6-4633-bbe6-537864fc77c7}/x64/Debug/SDKMinim.cec27524.tlog/: CL.33396.write.1.tlog  CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
MANUS_Core_3.0.0_SDK/license/: license.txt
build_simple/: CMakeCache.txt
config/: MANUS_INTEGRATION_README.md  build_manus_integration.bat  manus_integration.json
hand_ik/: CMakeLists.txt  README.txt  build_linux.sh  build_windows.bat  check_mpi_usage.bat  current_test_results.txt  quick_syntax_check.bat  rebuild_and_test.bat  run_jacobian_test.bat  test_solver_fixes.bat
hand_ik/cmake/: hand_ik_config.cmake.in
hand_ik/examples/: hand_ik_example.cpp
hand_ik/include/: hand_ik.hpp  math_constants.hpp  urdf_resolver.hpp
hand_ik/src/: hand_ik.cpp  main_example.cpp
hand_ik/tests/: test_jacobian.cpp  test_reachability.cpp  validate_coupling.cpp
include/: ManusConfig.h  ManusHandIKBridge.h  ManusSkeletonSetup.h  SDKClientIntegration.h  SurgeIntegration.h
src/: ManusConfig.cpp  ManusHandIKBridge.cpp  ManusHandIKBridge.h  ManusSkeletonSetup.cpp  ManusSkeletonSetup.h  SDKClientIntegration.cpp  SurgeIntegration.cpp
tests/: test_manus_integration.cpp
